@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-16T00:29:49Z",
-  "count" : 95,
+  "timestamp" : "2022-06-29T16:22:43Z",
+  "count" : 76,
   "count_minmax" : [ 8, 95 ],
-  "count_decinc" : [ -0, +95 ],
+  "count_decinc" : [ -19, +95 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
