@@ -1,10 +1,10 @@
 {
-  "count": 108,
+  "count": 89,
   "uniques": 2,
   "views": [
     {
       "timestamp": "2022-06-15T00:00:00Z",
-      "count": 95,
+      "count": 76,
       "uniques": 1
     },
     {
