@@ -1,3 +1,10 @@
+2022-06-29T16:22:43Z:
+* notice: last 14d: unq all: 2 89
+* notice: prev accum: outdated-unq outdated-all / unq all: 89 396 / 94 504
+* notice: next accum: outdated-unq outdated-all / unq all: 89 396 / 94 485
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -19 / +1 +95 -0 -19 / 1 76
+* notice: removed / changed dates: [] / [2022-06-15]
+
 2022-06-29T00:29:58Z:
 * notice: last 14d: unq all: 2 108
 * notice: prev accum: outdated-unq outdated-all / unq all: 88 394 / 94 504
